added input page with mock data

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,17 @@
   </head>
 
   <body>
-    <p>Hello world</p>
+    <section role="region" class="upc">
+      <h2>Enter product UPC</h2>
+      <form class="input-form">
+        <input class="upc-input" type="text" name="upc" value="035200264013" />
+        <input type="submit" name="submit" />
+      </form>
+    </section>
+    <section role="region" class="results"></section>
+    <section role="region" class="messages"></section>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://underscorejs.org/underscore-min.js"></script>
     <script src="index.js"></script>
   </body>
 </html>
