--- a/public/createAccount.html
+++ b/public/createAccount.html
@@ -27,17 +27,18 @@
       <div class="row">
         <div class="col-12">
           <section role="region" class="login">
-            <h2>Login</h2>
+            <h2>Create New Account</h2>
             <form class="input-form">
               <fieldset>
                 <label for="username">Username</label>
-                <input type="text" class="username" name="username" required />
-                <label for="password">Password</label>
-                <input type="text" class="password" name="password" required />
-                <button type="submit">Login</button>
+                <input type="text" class="new-username" name="username" required />
+                <label for="password1">Password</label>
+                <input type="text" class="new-password1" name="password1" required />
+                <label for="password2">Re-type Password</label>
+                <input type="text" class="new-password2" name="password2" required />
+                <button type="submit">Create Account</button>
               </fieldset>
             </form>
-            <a href="createAccount.html">New user? Create Account</a>
             <div class="row">
               <div class="col-6">
                 <section role="region" class="messages"></section>
