halfway done with client side

--- a/public/upcInput.html
+++ b/public/upcInput.html
@@ -16,7 +16,8 @@
         <header role="navigation">
           <ul>
             <li><a class="home">Home</a></li>
-            <li><a class="profile">Profile</a></li>
+            <li><a class="add-item">Add Item</a></li>
+            <li><a class="logout">Logout</a></li>
           </ul>
         </header>
       </div>
@@ -28,7 +29,7 @@
           <section role="region" class="upc">
             <h2>Enter product UPC</h2>
             <form class="input-form">
-              <input class="upc-input" type="text" name="upc" value="035200264013" />
+              <input class="upc-input" type="text" name="upc" value="0035200264013" />
               <input type="submit" name="submit" />
             </form>
           </section>
@@ -59,6 +60,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://underscorejs.org/underscore-min.js"></script>
     <script src="http://twitter.github.io/typeahead.js/releases/latest/typeahead.bundle.js"></script>
-    <script src="index.js"></script>
+    <script src="upcInput.js"></script>
   </body>
 </html>
