--- a/public/index.html
+++ b/public/index.html
@@ -51,6 +51,6 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://underscorejs.org/underscore-min.js"></script>
     <script src="http://twitter.github.io/typeahead.js/releases/latest/typeahead.bundle.js"></script>
-    <script src="index.js"></script>
+    <script src="login.js"></script>
   </body>
 </html>
