--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,8 @@
     <title>Fullstack Captsone</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
     <!-- <link href="css/pagination.css" rel="stylesheet" type="text/css" /> -->
-    <link href="float-grid.css" rel="stylesheet" type="text/css" />
-    <link href="main.css" rel="stylesheet" type="text/css" />
+    <link href="css/float-grid.css" rel="stylesheet" type="text/css" />
+    <link href="css/main.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
