finished code refactor

--- a/public/index.html
+++ b/public/index.html
@@ -37,7 +37,7 @@
                 <button type="submit">Login</button>
               </fieldset>
             </form>
-            <a href="createAccount.html">New user? Create Account</a>
+            <a href="views/createAccount.html">New user? Create Account</a>
             <div class="row">
               <div class="col-6">
                 <section role="region" class="messages"></section>
@@ -51,6 +51,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="https://underscorejs.org/underscore-min.js"></script>
     <script src="http://twitter.github.io/typeahead.js/releases/latest/typeahead.bundle.js"></script>
-    <script src="login.js"></script>
+    <script src="js/local.js"></script>
+    <script src="js/api.js"></script>
+    <script src="js/login.js"></script>
   </body>
 </html>
