styling almost completed

--- a/public/index.html
+++ b/public/index.html
@@ -3,21 +3,31 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width,intial-scale=1" />
-    <title>Fullstack Captsone</title>
+    <title>recycle-app</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet" />
-    <!-- <link href="css/pagination.css" rel="stylesheet" type="text/css" /> -->
     <link href="css/float-grid.css" rel="stylesheet" type="text/css" />
     <link href="css/main.css" rel="stylesheet" type="text/css" />
   </head>
 
   <body>
-    <div class="row">
+    <div class="row nav-bar">
       <div class="col-12">
         <header role="navigation">
-          <ul>
-            <li><a class="home">Home</a></li>
-            <li><a class="add-item">Add Item</a></li>
-            <li><a class="login" href="index.html">Login</a></li>
+          <ul class="nav-list">
+            <li class="app-title">
+              <div class="app-name">
+                <img
+                  class="recycle-symbol"
+                  src="..\images\recycle-symbol.png"
+                  alt="recycle symbol"
+                  height="30"
+                  width="30"
+                />recycle-app
+              </div>
+            </li>
+            <li class="nav-button"><a class="profile">Profile</a></li>
+            <li class="nav-button"><a class="add-item">Add Item</a></li>
+            <li class="nav-button"><a class="login">Login</a></li>
           </ul>
         </header>
       </div>
@@ -25,25 +35,25 @@
 
     <main role="main">
       <div class="row">
-        <div class="col-12">
-          <section role="region" class="login">
+        <div class="col-6">
+          <section role="region" class="login-form">
             <h2>Login</h2>
             <form class="input-form">
               <fieldset>
                 <label for="username">Username</label>
                 <input type="text" class="username" name="username" required />
                 <label for="password">Password</label>
-                <input type="text" class="password" name="password" required />
+                <input type="password" class="password" name="password" required />
                 <button type="submit">Login</button>
               </fieldset>
             </form>
             <a href="views/createAccount.html">New user? Create Account</a>
-            <div class="row">
-              <div class="col-6">
-                <section role="region" class="messages"></section>
-              </div>
-            </div>
           </section>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-6">
+          <section role="region" class="messages"></section>
         </div>
       </div>
     </main>
