--- a/public/index.html
+++ b/public/index.html
@@ -38,6 +38,7 @@
         <div class="col-12">
           <section role="region" class="login-form">
             <h2>Login</h2>
+            <div class="app-info">Use recycle-app to track the recyclability of your purchases</div>
             <form class="input-form">
               <fieldset>
                 <label for="username">Username</label>
@@ -47,7 +48,7 @@
                 <button type="submit">Login</button>
               </fieldset>
             </form>
-            <a href="views/createAccount.html">New user? Create Account</a>
+            <a href="views/createAccount.html" class="create-account">New user? Create Account</a>
           </section>
         </div>
       </div>
